re PR rtl-optimization/13985 (ICE in gcc.c-torture/compile/930621-1.c)

PR optimization/13985
	* cfgloopmanip.c (fix_loop_placements): New prototype.
	Call fix_bb_placements on the preheader of loops that have
	been reparented.
	(remove_path): Adjust call to fix_loop_placements.

From-SVN: r81116